# brady-crime-guns

./: .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  CODE_REVIEW.md  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.claude/: CLAUDE.md  README.md
.claude/.dev_agents/: ag-ui-middleware-developer.md  dev_claude_sdk_expert.md  md-conversion-validator.md
.claude/.dev_skills/skill-creator/: posts.md
.claude/.legal_agents/: deposition-strategist.md  exhibit-formatter.md
.claude/.legal_commands/: daily-rollup.md
.claude/.legal_skills/linkedin-post-creator/: SKILL.md
.claude/.legal_skills/linkedin-post-creator/references/: author_persona.md  example_posts.md  style_guide.md
.claude/agents/: adversarial-reader.md  crime-location-classifier.md  legal-spot-checker.md  report-analysis-dog.md  report-exhibit-ferret.md
.claude/commands/: README.md  comparison-cite-checker.md  deep-depo-coverage.md  depo-coverage-report.md  depo-coverage.md  docx-to-md.md  implementation-summary.md  mupdf.md  pdf-swarm.md  pdf-to-md.md  validate-eval.md  validate-expert-artifact.md
.claude/skills/ag-ui-development/: SKILL.md
.claude/skills/ag-ui-development/references/: event-types.md  (+2 more)
.claude/skills/classify-crime-location/: SKILL.md
.claude/skills/docx/: convert-highlights.js  package-lock.json
data/: brady.db
data/processed/: crime_gun_events.csv  dl2_dealers.csv
docs/: IMPLEMENTATION_REPORT.md  PRD_Crime_Gun_DB_Integration.docx  column_inventory.md  dashboard_readme.md  dashboard_status_update_v1.md  etl_planning.md  etl_readme.md  project_spec.md  schema-guide.md
docs/v_2/: test_fixtures.py
plans/: feat-crime-gun-dealer-db-integration.md
src/brady/: __init__.py  utils.py
src/brady/dashboard/: __init__.py  app.py
src/brady/etl/: __init__.py  classify_location.py  court_lookup.py  database.py  date_utils.py  google_drive.py  process_crime_gun_db.py  process_gunstat.py  relational.py  unified.py
tests/: __init__.py  test_court_lookup.py  test_date_utils.py  test_etl.py  test_process_crime_gun_db.py
v_2/: IMPLEMENTATION_GUIDE.md  PRD_Crime_Gun_DB_Integration.md  crime_gun_db_extractor.py  requirements_additions.txt  schema_additions.py
(+6 files in other folders)
